make popup content editable

--- a/includes/form.html
+++ b/includes/form.html
@@ -4,14 +4,7 @@
   href="javascript:;"
 ></a>
 <form id="rutinas-popup" style="display: none" method="POST">
-  <h3>Rutinas poderosas para lucir como siempre has querido</h3>
-  <p>
-    En este e-book encontraras los mejores pasos de una rutina diaria para
-    iniciar un estilo de vida saludable. Son comportamientos que al integrarlos
-    en tu día a día te ayudarán a cuidar tu interior, sintiéndote con más
-    energía, ligera, descansando de una manera reparadora que harán lucir tu
-    exterior con más vitalidad y proyectar todo lo que eres.
-  </p>
+  {{content}}
   <div class="form-section">
     <label for="nombre">Nombre Completo</label>
     <input type="text" name="nombre" required />
